@@ -36,10 +36,6 @@ val set_paths : ?auto_include:Load_path.auto_include_callback -> unit -> unit
 
 val update_search_path_from_env : unit -> unit
 
-(* Load topdirs.cmi directly from +compiler-libs if not found in include dirs *)
-
-val load_topdirs_signature : unit -> unit
-
 (* Management and helpers for the execution *)
 
 val toplevel_env : Env.t ref
